# Maya-plugin-CPack-template

./: .gitignore  README.TXT  build_tools.py  run_deploy.py
deployment/: CMakeLists.txt  PackageContents.xml.in  cpack_setup.cmake  cpack_setup_nsis.cmake  doxygen_setup.cmake  main.cpp  version_number.cmake
deployment/resources/: DESCRIPTION.txt  LICENSE.txt  WELCOME.txt
deployment/shortcuts/: README.txt  launch.bat  launch_maya_2014.lnk  launch_maya_2015.lnk  launch_maya_2016.5.lnk  launch_maya_2016.lnk  launch_maya_2017.lnk  launch_maya_2018.lnk
doc/manual/: build_doc.sh  doxygen_config.txt  user_documentation.htm
doc/manual/html/: graph_legend.html  index.html  my_customdoxygen.css  navtreedata.js
doc/manual/latex/: index.tex  make.bat  refman.tex
doc/manual/source_dox/: main_page.dox
prefs/shelves/: NOTE.txt  generate_shelves.py
prefs/shelves/maya2017/: shelf_My_awesome_plugin_for_maya.mel
scripts/: my_awesome_plugin_for_maya_load.mel
